# KeinLang

./: CMakeLists.txt  README.md
src/: config.c  config.h  functions.c  functions.h  main.c  parser.c  parser.h  variables.c  variables.h
